--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -8,5 +8,11 @@ spring.datasource.username=root
 spring.datasource.password=Astha@321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
