--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.application.name=ecommerce
 server.port=8081
 
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/product_db
-spring.datasource.username=root
-spring.datasource.password=Astha@321
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
