--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ build/
 !**/src/test/**/build/
 /target              //this prevents unnecessary files from going to GitHub
 /.idea
+.env
+
 
 ### VS Code ###
 .vscode/
