--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ecommerce
-server.port=${PORT:8081}
+server.port=${PORT}
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:mysql.railway.internal}:${DB_PORT:3306}/${DB_NAME:product_db}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${DB_USER:root}
