--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=ecommerce
 server.port=${PORT}
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql.railway.internal}:${DB_PORT:3306}/${DB_NAME:product_db}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASSWORD:Astha@321}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
