--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,8 @@
-server.port=8081
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/product_db
-spring.datasource.username=root
-spring.datasource.password=Astha@321
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
