--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,8 @@
-spring.application.name=ecommerce
-server.port=${PORT}
 
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Set the active profile
+spring.profiles.active=@spring.profiles.active@
 
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-spring.jpa.open-in-view=true
 
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
+
