--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.profiles.active=local
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.results=DEBUG
+# This keeps names exactly as they are written in Java
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
