--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/product_db
 spring.datasource.username=root
 spring.datasource.password=Astha@321
+spring.jpa.hibernate.ddl-auto=update
