--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Important for Aiven SSL
+spring.datasource.hikari.data-source-properties.sslMode=REQUIRED
 
