--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-
 spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
+spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#Important for Aiven SSL
-spring.datasource.hikari.data-source-properties.sslMode=REQUIRED
+-Dspring.profiles.active=prod
 
