--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
 
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
